# vecdb-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/vecdb/: collection.hpp  hnsw_index.hpp  index.hpp  storage.hpp  transaction.hpp  types.hpp  wal.hpp
src/: bruteforce.cpp  bruteforce.hpp  collection.cpp  hnsw_index.cpp  main.cpp  storage.cpp  transaction.cpp  wal.cpp
tests/: test_insert_search_persistence.cpp
